Fixed number formatting.